# Qt-ITK-VTK-Image-Viewer

./: .gitignore  CMakeLists.txt  GADFilterDialog.cpp  GADFilterDialog.h  GADFilterDialog.ui  MedianFilterDialog.ui  README  imageviewer.cpp  imageviewer.h  imagewidget.cpp  imagewidget.h  main.cpp  medianFilterDialog.cpp  medianFilterDialog.h  moc_imageviewer.cxx
build-xcode/: ui_GADFilterDialog.h  ui_MedianFilterDialog.h
build-xcode-3.20/: ui_GADFilterDialog.h  ui_MedianFilterDialog.h
build-xcode-3.20/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ImageViewer_cmakeRulesBuildPhase.makeRelease  ImageViewer_postBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make
build-xcode-3.20/ImageViewer.build/Release/ImageViewer.build/: ImageViewer.dep  ImageViewer~.dep  Script-106288010628801062880000.sh  Script-106344010634401063440000.sh  Script-1063B701063B701063B70000.sh
build-xcode-3.20/ImageViewer.build/Release/ImageViewer.build/Objects-normal/x86_64/: GADFilterDialog.d  ImageViewer.LinkFileList  MedianFilterDialog.d  imageviewer.d  imagewidget.d  main.d
build-xcode-3.20/ImageViewer.xcodeproj/: project.pbxproj
build-xcode-3.20/ImageViewer.xcodeproj/project.xcworkspace/xcuserdata/zian.xcuserdatad/: UserInterfaceState.xcuserstate
build-xcode-3.20/ImageViewer.xcodeproj/xcuserdata/zian.xcuserdatad/xcschemes/: ALL_BUILD 2.xcscheme  ALL_BUILD 4.xcscheme  ALL_BUILD 6.xcscheme  ALL_BUILD.xcscheme  ImageViewer 2.xcscheme  ImageViewer 4.xcscheme  ImageViewer 6.xcscheme  ImageViewer.xcscheme  xcschememanagement.plist
build-xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ImageViewer_cmakeRulesBuildPhase.makeMinSizeRel  ImageViewer_postBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make
build-xcode/ImageViewer.build/Debug/ImageViewer.build/: ImageViewer.dep  ImageViewer~.dep  Script-146889014688901468890000.sh
build-xcode/ImageViewer.build/Debug/ImageViewer.build/Objects-normal/x86_64/: ImageViewer.LinkFileList  MedianFilterDialog.d  imageviewer.d  imagewidget.d  main.d
build-xcode/ImageViewer.build/Release/ImageViewer.build/: ImageViewer.dep  ImageViewer~.dep  Script-146703014670301467030000.sh  Script-1467B901467B901467B90000.sh
build-xcode/ImageViewer.xcodeproj/: project.pbxproj
build-xcode/ImageViewer.xcodeproj/project.xcworkspace/xcuserdata/zian.xcuserdatad/: UserInterfaceState.xcuserstate
build-xcode/ImageViewer.xcodeproj/xcuserdata/zian.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ImageViewer.xcscheme  xcschememanagement.plist
build_3.20/: ui_GADFilterDialog.h  ui_MedianFilterDialog.h
(+5 files in other folders)
